[package]
name = "wormhole-anchor-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK using Anchor interfaces to interact with Wormhole Solana Programs"

[features]
mainnet = []
solana-devnet = []
tilt-devnet = []
token-bridge = []

[dependencies]
anchor-lang = { git = "https://github.com/hmzakhalid/anchor" }
anchor-spl = { git = "https://github.com/hmzakhalid/anchor" }